runtime/Monitor/SyncOnValueBasedClassTest.java failing after dropping enable-preview